@@ -54,9 +54,9 @@ if (sizeof($themes)) {
             'id'          => $p->name,
 			'name'        => $p->name,
             'upgrade'     => $p['upgrade'],
-            'description' => $p['description'],
+            'description' => $p['description']?$p['description']:'',
             'version'     => $p['version'],
-            'title'       => $p['title'],
+            'title'       => $p['title']?$p['title']:$p->name,
 			'author'      => $p['author'],
 			'content'     => $p->getContentInfo(),
 			'url'         => trim($p->getUrl(),'/'),
